--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width initial-scale=1 user-scalable=no" />
   <title>Spectacle Boilerplate</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+  
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/prismjs@1.10.0/themes/prism-okaidia.css">
+  
 </head>
 <body>
   <div id="root"></div>
